# vietnamese-law-bot

./: .gitignore  docker-compose.yml  pyproject.toml
data/: chung.json  migrate.py  nhien_migrate.py
docker/: ollama.sh
notebooks/: chung.json  nhien_graphdb.py
src/: Dockerfile  main.py
src/agent/: __init__.py  models.py  prompt.py  tools.py
src/configs/: gemini.py  neo4j.py
src_nhien/: .gitignore  Dockerfile  LLM_gemini.py  answer_generator.py  build_graphdb.py  config.py  database.py  extract_data_from_graph.py  main.py  query_generator.py
ui/: main.py
