[project]
name = "legalhelper"
version = "0.1.0"
description = "FUDN HackAIthon - Legal Helper - OpenJARVIS"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "qdrant-client (>=1.13.3,<2.0.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "llama-index (>=0.12.31,<0.13.0)",
    "llama-index-llms-ollama (>=0.5.4,<0.6.0)",
    "llama-index-llms-gemini (>=0.4.14,<0.5.0)",
    "llama-index-llms-google-genai (>=0.1.7,<0.2.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pandas = "^2.2.3"
gradio = "^5.25.2"

